Show random video

--- a/layout.jade
+++ b/layout.jade
@@ -4,10 +4,10 @@ html.no-js
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1, minimal-ui")
-    meta(property="og:title", content="")
-    meta(property="og:site_name", content="")
-    meta(property="og:url", content="")
-    meta(property="og:image", content="")
+    meta(property="og:title", content="All My Friends Music Festival")
+    meta(property="og:site_name", content="All My Friends Music Festival")
+    meta(property="og:url", content="http://2014.amfmf.com")
+    meta(property="og:image", content="http://2014.amfmf.com/img/amfmf.png")
     meta(property="og:type", content="website")
     meta(property="og:description", content="")
     title= title
