--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -1,3 +1,28 @@
 @require 'reset'
 @require 'helpers'
 
+html, body
+  width 100%
+  height 100%
+
+#tattoos
+  background url("/img/tattoos.svg")
+  background-size contain
+  background-position center center
+  position absolute
+  top 0
+  left 0
+  right 0
+  bottom 0
+  z-index 2
+
+video
+  background black
+  position fixed
+  top 0
+  left 0
+  min-width 100%
+  min-height 100%
+  width auto
+  height auto
+  z-index 0
