--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html.no-js
     meta(property="og:url", content="http://specola.mx")
     meta(property="og:image", content="http://specola.mx/img/specola.png")
     meta(property="og:type", content="website")
-    meta(property="og:description", content="Spécola es una productora de video digital de servicio completo ubicada en Tijuana. Surge del interés y esfuerzo de los integrantes por establecer una entidad que logre la visión creativa que cada proyecto demande, ya sea propio o del cliente, con un nivel de calidad y profesionalismo que exprese la pasión que tenemos por el cine.")
+    meta(property="og:description", content="El festival cambia de época del año y de locación. Ahora se llevará a cabo en verano, específicamente el 14 de junio en Castillos del Mar, Rosarito, Baja California.")
     title= title
     != css('main')
     != js('modernizr')
