--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,21 +3,22 @@ html.no-js
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1")
-    meta(property="og:title", content="Specola")
-    meta(property="og:site_name", content="Specola")
-    meta(property="og:url", content="http://specola.mx")
-    meta(property="og:image", content="http://specola.mx/img/specola.png")
+    meta(name="viewport", content="width=device-width, initial-scale=1, minimal-ui")
+    meta(property="og:title", content="All My Friends Music Festival")
+    meta(property="og:site_name", content="All My Friends Music Festival")
+    meta(property="og:url", content="http://2014.amfmf.com")
+    meta(property="og:image", content="http://2014.amfmf.com/img/amfmf.png")
     meta(property="og:type", content="website")
-    meta(property="og:description", content="El festival cambia de época del año y de locación. Ahora se llevará a cabo en verano, específicamente el 14 de junio en Castillos del Mar, Rosarito, Baja California.")
+    meta(property="og:description", content="")
     title= title
     != css('main')
     != js('modernizr')
     script.
       WebFontConfig = {
-        google: { families: [ 'Karla:400,400italic,700,700italic:latin' ] }
+        google: { families: [  ] }
       };
       (function() {
+        // Webfonts
         var wf = document.createElement('script');
         wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
           '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
@@ -25,10 +26,21 @@ html.no-js
         wf.async = 'true';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(wf, s);
+
+        // Analytics
+        var _gaq = _gaq || [];
+        _gaq.push(["_setAccount","UA-35002156-1"]);
+        _gaq.push(["_setDomainName","2014.amfmf.com"]);
+
+        _gaq.push(['_trackPageview']);
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
       })()
   body
     block content
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
-    script(src="//www.gstatic.com/swiffy/v6.0/runtime.js")
-    script(src="//a.vimeocdn.com/js/froogaloop2.min.js")
     != js('main')
