Correct opengraph image

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html.no-js
     meta(property="og:title", content="All My Friends Music Festival")
     meta(property="og:site_name", content="All My Friends Music Festival")
     meta(property="og:url", content="http://2014.amfmf.com")
-    meta(property="og:image", content="http://2014.amfmf.com/img/amfmf.png")
+    meta(property="og:image", content="http://2014.amfmf.com/img/amfmf.jpg")
     meta(property="og:type", content="website")
     meta(property="og:description", content="")
     title= title
