Use correct description for opengraph

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html.no-js
     meta(property="og:url", content="http://2014.amfmf.com")
     meta(property="og:image", content="http://2014.amfmf.com/img/amfmf.jpg")
     meta(property="og:type", content="website")
-    meta(property="og:description", content="")
+    meta(property="og:description", content="El festival cambia de época del año y de locación. Ahora se llevará a cabo en verano, específicamente el 14 de junio en Castillos del Mar, Rosarito, Baja California.")
     title= title
     != css('main')
     != js('modernizr')
