Add facebook event image to link to event

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+  a#event.wobble-top(href="https://www.facebook.com/events/726790910698788")
+    img(src="/img/event.png")
   #tattoos
   video(autoplay, loop, poster="/img/video.jpg")
     source(src=video, type="video/mp4")
