--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,7 @@ html.no-js
     meta(property="og:type", content="website")
     meta(property="og:description", content="El festival cambia de época del año y de locación. Ahora se llevará a cabo en verano, específicamente el 14 de junio en Castillos del Mar, Rosarito, Baja California.")
     title= title
+    != css('hover')
     != css('main')
     != js('modernizr')
     script.
