--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -5,6 +5,21 @@ html, body
   width 100%
   height 100%
 
+#event
+  display block
+  position fixed
+  border none
+  text-decoration none
+  z-index 3
+  bottom 40px
+  right 40px
+  // transform rotate(-6deg)
+  // -webkit-transform @transform
+  // -moz-transform @transform
+  box-shadow 4px 10px 10px rgba(0,0,0,0.3)
+  img
+    display block
+
 #tattoos
   background url("/img/tattoos.svg")
   background-size contain
@@ -15,6 +30,9 @@ html, body
   right 0
   bottom 0
   z-index 2
+
+
+
 
 video
   background black
