Use png instead of svg

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -21,7 +21,7 @@ html, body
     display block
 
 #tattoos
-  background url("/img/tattoos.svg")
+  background url("/img/tattoos.png")
   background-size contain
   background-position center center
   position absolute
