Add link to 2013 amfmf website

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,9 @@
 extends layout
 
 block content
+  a#last-year.buzz-out(href="//2013.amfmf.com")
+    span.hand ☜
+    span.text Last year's AMF
   a#event.wobble-top(href="https://www.facebook.com/events/726790910698788")
     img(src="/img/event.png")
   #tattoos
