--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,7 +16,7 @@ html.no-js
     != js('modernizr')
     script.
       WebFontConfig = {
-        google: { families: [  ] }
+        google: { families: [ 'Amatic+SC:700' ] }
       };
       (function() {
         // Webfonts
