--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -5,6 +5,32 @@ html, body
   width 100%
   height 100%
 
+#last-year
+  background #000
+  color #fff
+  transform rotate(-6deg)
+  -webkit-transform @transform
+  -moz-transform @transform
+  z-index 5
+  position fixed
+  left 20px
+  bottom 120px
+  text-transform uppercase
+  text-decoration none
+  display block
+  padding 10px
+  .text
+    font-family Amatic SC, sans-serif
+    text-decoration none
+    font-size 38px
+    line-height @line-height
+  .hand
+    font-size 48px
+    font-weight bold
+    position relative
+    top 0.16em
+    margin-right 10px
+
 #event
   display block
   position fixed
