--- a/views/layout.jade
+++ b/views/layout.jade
@@ -45,3 +45,4 @@ html.no-js
     block content
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js")
     != js('main')
+    block scripts
