--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -71,3 +71,55 @@ video
   width auto
   height auto
   z-index 0
+
+body
+  background #000
+  font-family Helvetica, sans-serif
+
+#video
+  position relative
+  background #000
+
+.iframe-wrapper
+  position relative
+  margin 0 auto
+
+.iframe-wrapper .iframe-height
+  position relative
+
+.iframe-wrapper iframe
+  position absolute
+  top 0
+  left 0
+  width 100%
+  height 100%
+
+#all
+  color #fff
+  width 640px
+  margin 0 auto
+  line-height 1.4em
+  padding 20px 0 40px
+  overflow hidden
+  background rgba(0,0,0,0.6)
+
+  .text
+    width 320px
+    float left
+
+  h2
+    text-transform uppercase
+    line-height 2em
+  p
+    margin 1em 0
+
+  .tickets
+    float right
+
+  .tickets a
+    height 0
+    padding-top 241px
+    width 285px
+    overflow hidden
+    display block
+    background url("../img/boletos.png")
