--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -5,121 +5,212 @@ html, body
   width 100%
   height 100%
 
-#last-year
-  background #000
-  color #fff
-  transform rotate(-6deg)
-  -webkit-transform @transform
-  -moz-transform @transform
-  z-index 5
-  position fixed
-  left 20px
-  bottom 120px
-  text-transform uppercase
-  text-decoration none
-  display block
-  padding 10px
-  .text
-    font-family Amatic SC, sans-serif
-    text-decoration none
-    font-size 38px
-    line-height @line-height
-  .hand
-    font-size 48px
-    font-weight bold
-    position relative
-    top 0.16em
-    margin-right 10px
+body
+  font-family Amatic SC, sans-serif
+  font-weight bold
+  background #4ae7f3
+  background -moz-linear-gradient(top,  #4ae7f3 0%, #ecd7ea 100%)
+  background -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4ae7f3), color-stop(100%,#ecd7ea))
+  background -webkit-linear-gradient(top,  #4ae7f3 0%,#ecd7ea 100%)
+  background -ms-linear-gradient(top,  #4ae7f3 0%,#ecd7ea 100%)
+  background linear-gradient(to bottom,  #4ae7f3 0%,#ecd7ea 100%)
+  background-attachment fixed
 
-#event
-  display block
-  position fixed
-  border none
-  text-decoration none
-  z-index 3
-  bottom 40px
-  right 40px
-  // transform rotate(-6deg)
-  // -webkit-transform @transform
-  // -moz-transform @transform
-  box-shadow 4px 10px 10px rgba(0,0,0,0.3)
+a
+  color black
+
+#header
+  position relative
   img
     display block
+    max-width 768px
+    width 100%
+    margin 0 auto
 
-#tattoos
-  background url("/img/tattoos.png")
-  background-size contain
-  background-position center center
-  position absolute
+#lineup
+
+  margin 30px auto
+
+  text-align center
+  font-size 68px
+  a
+    margin 0.1em 0.2em
+    text-decoration none
+    position relative
+    -webkit-transition -webkit-transform ease-in-out 0.3s
+    transition transform ease-in-out 0.3s
+  .bands
+    .row
+      overflow hidden
+    @media only screen and (min-width: 768px)
+      .row:nth-child(2)
+        font-size 95%
+      .row:nth-child(3)
+        font-size 95%
+      .row:nth-child(4)
+        font-size 92%
+      .row:nth-child(5)
+        font-size 65%
+      .row:nth-child(6)
+        font-size 70%
+      .row:nth-child(7)
+        font-size 56%
+      .row:nth-child(8)
+        font-size 65%
+  .other
+    @media only screen and (min-width: 768px)
+      font-size 24px
+      text-align center
+      position relative
+      &:after
+        background-image url("../img/linev.svg")
+        background-size contain
+        background-repeat no-repeat
+        content ""
+        width 5px
+        height 120px
+        position absolute
+        display block
+        left 0
+        right 0
+        top 0
+        margin 0 auto
+      .row
+        width 25%
+        display inline-block
+        vertical-align top
+        box-sizing border-box
+        padding 1em
+        h3
+          font-size 80%
+          text-transform uppercase
+          font-weight normal
+        &:nth-child(odd)
+          text-align right
+        &:nth-child(even)
+          text-align left
+
+
+@-webkit-keyframes bgone {
+   from { background-position 320px 320px }
+   to { background-position 0 0 }
+}
+
+@-webkit-keyframes bgtwo {
+   from { background-position 0 0 }
+   to { background-position 320px 640px }
+}
+
+#detail-container
+  position fixed
   top 0
   left 0
   right 0
   bottom 0
-  z-index 2
-
-
-
-
-video
-  background black
-  background-position center center
-  position fixed
-  top 0
-  left 0
-  min-width 100%
-  min-height 100%
-  width auto
-  height auto
-  z-index 0
-
-body
-  background #000
-  font-family Helvetica, sans-serif
-
-#video
-  position relative
-  background #000
-
-.iframe-wrapper
-  position relative
-  margin 0 auto
-
-.iframe-wrapper .iframe-height
-  position relative
-
-.iframe-wrapper iframe
-  position absolute
-  top 0
-  left 0
-  width 100%
-  height 100%
-
-#all
   color #fff
-  width 640px
-  margin 0 auto
-  line-height 1.4em
-  padding 20px 0 40px
-  overflow hidden
-  background rgba(0,0,0,0.6)
+  z-index 99
 
-  .text
-    width 320px
-    float left
+  #detail
+    position relative
+    z-index 100
+    h1
+      font-size 72px
+      text-align center
+      line-height 2em
+      position relative
+      -webkit-transition all ease-in-out 0.3s
+      transition all ease-in-out 0.3s
+    img
+      display block
+      margin -40px auto
+      max-width 80%
+      -webkit-transform rotate(-2deg)
+      transform rotate(-2deg)
+      -webkit-transition all ease-in-out 0.3s
+      transition all ease-in-out 0.3s
+    .text
+      font-size 32px
+      max-width 40%
+      margin 0 auto
+      z-index 10
+      position fixed
+      bottom 40px
+      left 0
+      right 0
+      -webkit-transform rotate(-4deg)
+      transform rotate(-4deg)
+      -webkit-transition all ease-in-out 0.3s
+      transition all ease-in-out 0.3s
+    .controls
+      top 0
+      position absolute
+      width 100%
+      a
+        color #fff
+        text-decoration none
+        font-size 38px
+        top 0
+        position absolute
+        height 0
+        display block
+        -webkit-transition all ease-in-out 0.3s
+        transition all ease-in-out 0.3s
+        span
+          position relative
+          display block
+          text-align center
 
-  h2
-    text-transform uppercase
-    line-height 2em
-  p
-    margin 1em 0
+    a.next
+      right 20px
+      text-align right
+      span
+        -webkit-transform rotate(-90deg)
+        -webkit-transform-origin 100% 100%
+        transform-origin 100% 100%
+        transform rotate(-90deg)
 
-  .tickets
-    float right
+    a.prev
+      left 20px
+      span
+        -webkit-transform rotate(90deg)
+        transform rotate(90deg)
+        -webkit-transform-origin 0 100%
+        transform-origin 0 100%
 
-  .tickets a
-    height 0
-    padding-top 241px
-    width 285px
-    overflow hidden
-    display block
-    background url("../img/boletos.png")
+  .bg
+    background url("../img/clouds.png")
+    position fixed
+    top 0
+    left 0
+    right 0
+    bottom 0
+    opacity 0.6
+    pointer-events auto
+    -webkit-transition opacity 0.6s ease-in-out
+    -moz-transition opacity 0.6s ease-in-out
+    transition opacity 0.6s ease-in-out
+    -webkit-animation-name bgone
+    -webkit-animation-duration 40s
+    -webkit-animation-timing-function linear
+    -webkit-animation-iteration-count infinite
+    &:nth-child(odd)
+      -webkit-animation-name bgtwo
+      -webkit-animation-duration 16s
+
+#detail-container.transition
+  #detail
+    h1
+      opacity 0
+      -webkit-transform scale(3)
+      transform scale(3)
+    img
+      -webkit-transform rotate(4deg) scale(0.5)
+      transform rotate(4deg) scale(0.5)
+      opacity 0
+    a.next
+      right -100px
+    a.prev
+      left -100px
+    .text
+      bottom -400px
+      opacity 0
