Add close button, remove debugger lines,

--- a/views/detail.jade
+++ b/views/detail.jade
@@ -2,6 +2,7 @@ extends index
 
 block detail
   #detail
+    a.close(href="/") Close
     h1= detail.name
     img(src="/media/#{detail.slug}.jpg")
     .text
