--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -113,6 +113,20 @@ a
   #detail
     position relative
     z-index 100
+    .close
+      width 80px
+      height 0
+      padding-top @width
+      overflow hidden
+      background-image url("../img/close.svg")
+      background-size contain
+      background-repeat no-repeat
+      overflow hidden
+      display block
+      position absolute
+      top 40px
+      left 40px
+      z-index 666
     h1
       font-size 72px
       text-align center
