Updated header image and added favicon

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -23,9 +23,9 @@ a
   position relative
   img
     display block
-    max-width 768px
     width 100%
     margin 0 auto
+    pointer-events none
 
 #lineup
 
@@ -142,6 +142,7 @@ a
       transform rotate(-2deg)
       -webkit-transition all ease-in-out 0.3s
       transition all ease-in-out 0.3s
+      pointer-events none
     .text
       font-size 32px
       max-width 40%
