--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
     window.AMFLINEUP = !{JSON.stringify(lineup)}
 
   #header(data-path="/", data-marker)
-    img(src="/img/amf2014.png")
+    img(src="/img/amfsplash.png")
 
   #lineup(data-path="/lineup", data-marker)
     .bands
