--- a/views/index.jade
+++ b/views/index.jade
@@ -54,5 +54,41 @@ block content
     .bg
 
 
+  #more-info
+    h1.when Del 13 al 15 de Junio 2014
+    .places
+      h1 Festival Site
+      .site.festival-site
+        h3 Castillos del Mar
+        p.
+          Carretera Libre Tijuana – Ensenada km 29.5<br>
+          22710 Rosarito, Baja California Sur, Mexico
+      h1.tickets Tickets
+      .site
+        h4 Taquilla del Blackbox<br>
+        p.
+          Ave. Revolución<br>
+          (1pm a 7pm de lun-sáb)
+
+      .site
+        h4 Café Diente de León<br>
+        p.
+          Malecón de Playas de Tijuana<br>
+          (1pm a 7pm de lun-sáb)
+
+      .site
+        h4 Moustache Bar<br>
+        p.
+          Centro Entre 6ta y Madero<br>
+          (1pm a 7pm de lun-sáb)
+
+
+  footer
+    p
+      a(href="https://www.facebook.com/allmyfriendsmf") Facebook
+      a(href="https://www.twitter.com/infoamf") Twitter
+
+
+
 prepend scripts
   script(src="http://a.vimeocdn.com/js/froogaloop2.min.js")
