--- a/views/index.jade
+++ b/views/index.jade
@@ -63,7 +63,12 @@ block content
         p.
           Carretera Libre Tijuana – Ensenada km 29.5<br>
           22710 Rosarito, Baja California Sur, Mexico
-      h1.tickets Tickets
+      .tickets
+        h1 Tickets
+        :markdown
+          Preventa en línea con [Arema Tickets](https://www.arema.com.mx/arema/arefb/FuncionesEvento.asp?PosNArr=%201777)
+          o en los siguientes puntos de venta:
+
       .site
         h4 Taquilla del Blackbox<br>
         p.
@@ -84,9 +89,10 @@ block content
 
 
   footer
+    .indio
     p
       a(href="https://www.facebook.com/allmyfriendsmf") Facebook
-      a(href="https://www.twitter.com/infoamf") Twitter
+      a(href="https://www.twitter.com/infoamf") @infoamf
 
 
 
