--- a/views/index.jade
+++ b/views/index.jade
@@ -29,7 +29,7 @@ block content
         a(href="/batwingsvsskrapez") Batwings vs Skrapez
       .row
         a(href="/systemerror") System Error
-        a(href="/brunodario") Bruno Darío
+        a(href="/elvelar") Bruno Darío/El Velar
       .row
         a(href="/cesarcoronado") César Coronado
         a(href="/ladrones") L.A. Drones
@@ -73,19 +73,19 @@ block content
         h4 Taquilla del Blackbox<br>
         p.
           Ave. Revolución<br>
-          (1pm a 7pm de lun-sáb)
+          (Lunes a Sábado de 1pm a 7pm)
 
       .site
         h4 Café Diente de León<br>
         p.
           Malecón de Playas de Tijuana<br>
-          (1pm a 7pm de lun-sáb)
+          (Martes a Domingo de 1pm a 9pm)
 
       .site
         h4 Moustache Bar<br>
         p.
           Centro Entre 6ta y Madero<br>
-          (1pm a 7pm de lun-sáb)
+          (Jueves a Sábado de 8pm a 2am)
 
 
   footer
