Fix redirect on language change

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,7 @@ block content
     window.AMFLINEUP = !{JSON.stringify(lineup)}
 
   #header
+    != str.lang_link
     img(src="/img/amfsplash.png")
 
   #lineup
