--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -21,6 +21,20 @@ a
 
 #header
   position relative
+  a
+    z-index 3000
+    position fixed
+    top 10px
+    right 10px
+    border-radius 100px
+    display block
+    background black
+    color white
+    font-size 38px
+    width 60px
+    text-align center
+    line-height @width
+    text-decoration none
   img
     display block
     width 100%
