--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -296,7 +296,7 @@ a
       -webkit-animation-timing-function linear
 
 
-#more-info
+#info
   width 768px
   margin 0 auto
   text-align center
@@ -356,7 +356,6 @@ a
       font-weight bold
 
   h1.when
-    font-size 48px
     &:after
       content ""
       width 480px
@@ -375,6 +374,16 @@ a
   p
     font-weight normal
     font-size 28px
+
+  .info-box
+    max-width 320px
+    margin 20px
+    display inline-block
+    vertical-align top
+
+    h2
+      font-size 48px
+
 
 .indio
   background-image url("../img/indio.svg")
