Fix english translation, add hotel

--- a/views/index.jade
+++ b/views/index.jade
@@ -72,8 +72,10 @@ block content
         .site!= str.dientedeleon
         .site!= str.moustache
 
+    h1!= wheretosleep
+    .info-box!= str.hotelcoronaplaza
+    .info-box!= str.hotelcastillosdelmar
     .info-box!= str.gettingthere
-    .info-box!= str.wheretosleep
     .info-box!= str.infomore
 
 
