Add title correctly to Where to Sleep

--- a/views/index.jade
+++ b/views/index.jade
@@ -72,7 +72,7 @@ block content
         .site!= str.dientedeleon
         .site!= str.moustache
 
-    h1!= wheretosleep
+    h1!= str.wheretosleep
     .info-box!= str.hotelcoronaplaza
     .info-box!= str.hotelcastillosdelmar
     .info-box!= str.gettingthere
