--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -66,6 +66,8 @@ a
     position relative
     -webkit-transition -webkit-transform ease-in-out 0.3s
     transition transform ease-in-out 0.3s
+  p a
+    margin 0
   .bands
     .row
       overflow hidden
