Add listen button

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -226,6 +226,18 @@ a
       transform rotate(-4deg)
       -webkit-transition all ease-in-out 0.3s
       transition all ease-in-out 0.3s
+
+    .tabs a
+      display block
+      text-decoration none
+      width 80px
+      border-radius @width
+      line-height @width
+      background-color white
+      text-align center
+      font-size 28px
+      margin-bottom 20px
+
     .controls
       top 0
       position absolute
