--- a/views/index.jade
+++ b/views/index.jade
@@ -82,4 +82,4 @@ block content
 
 
 prepend scripts
-  script(src="http://a.vimeocdn.com/js/froogaloop2.min.js")
+  script(src="//cdn.embed.ly/jquery.embedly-3.1.1.min.js")
