--- a/views/detail.jade
+++ b/views/detail.jade
@@ -6,7 +6,13 @@ block detail
     h1= detail.name
     .image(style="background-image: url(/media/#{detail.slug}.jpg)")
     .text
-      p= detail.bio[lang]
+      if detail.song
+        .tabs
+          a.bio(style="display:none")(href="#bio") Bio
+          a.listen(href=detail.song) Escucha
+      .bio-content
+        p= detail.bio[lang]
+      .listen-content
 
     .controls
       a.prev(href="/" + prev.slug): span= prev.name
