--- a/views/index.jade
+++ b/views/index.jade
@@ -59,6 +59,13 @@ block content
           p.
             Carretera Libre Tijuana – Ensenada km 29.5<br>
             22710 Rosarito, Baja California Sur, Mexico
+          .gallery
+            a(href="/media/venue/venue1.jpg"): img(src="/media/venue/venue1sml.jpg")
+            a(href="/media/venue/venue2.jpg"): img(src="/media/venue/venue2sml.jpg")
+            a(href="/media/venue/venue3.jpg"): img(src="/media/venue/venue3sml.jpg")
+            a(href="/media/venue/venue4.jpg"): img(src="/media/venue/venue4sml.jpg")
+            a(href="/media/venue/venue5.jpg"): img(src="/media/venue/venue5sml.jpg")
+            a(href="/media/venue/venue6.jpg"): img(src="/media/venue/venue6sml.jpg")
         .tickets
           h1 Tickets
           != tickets
