--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html.no-js
     meta(property="og:type", content="website")
     meta(property="og:description", content="El festival cambia de época del año y de locación. Ahora se llevará a cabo en verano, específicamente el 14 de junio en Castillos del Mar, Rosarito, Baja California.")
     title= title
+    != css('gallery')
     != css('hover')
     != css('main')
     != js('modernizr')
