Change Baja California Sur to Baja California

--- a/views/index.jade
+++ b/views/index.jade
@@ -58,7 +58,7 @@ block content
           h3 Castillos del Mar
           p.
             Carretera Libre Tijuana – Ensenada km 29.5<br>
-            22710 Rosarito, Baja California Sur, Mexico
+            22710 Rosarito, Baja California, Mexico
           .gallery
             a(href="/media/venue/venue1.jpg"): img(src="/media/venue/venue1sml.jpg")
             a(href="/media/venue/venue2.jpg"): img(src="/media/venue/venue2sml.jpg")
