Add sponsors and associated media

--- a/views/index.jade
+++ b/views/index.jade
@@ -79,9 +79,11 @@ block content
     .info-box!= str.gettingthere
     .info-box!= str.infomore
 
+    #with!= str.with
+
+
 
   footer
-    .indio
     p
       a(href="https://www.facebook.com/allmyfriendsmf") Facebook
       a(href="https://www.twitter.com/infoamf") @infoamf
