Change link text to english and spanish

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -24,17 +24,20 @@ a
   a
     z-index 3000
     position fixed
-    top 10px
-    right 10px
+    top 20px
+    right 20px
     border-radius 100px
     display block
     background black
     color white
-    font-size 38px
-    width 60px
+    font-size 28px
     text-align center
-    line-height @width
+    padding 10px 20px
+    text-transform uppercase
     text-decoration none
+    -webkit-transform rotate(12deg)
+    transform rotate(12deg)
+
   img
     display block
     width 100%
