Fix sponsors h2 font size

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -423,14 +423,10 @@ a
     h2
       font-size 48px
 
-
-.indio
-  background-image url("../img/indio.svg")
-  background-size contain
-  width 160px
-  height 65px
-  display block
-  margin 0 auto
+#with
+  margin 40px 0
+  h2
+    font-size 32px
 
 footer
   box-sizing border-box
