--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,8 +7,8 @@ html.no-js
     meta(name="viewport", content="width=device-width, initial-scale=1, minimal-ui")
     meta(property="og:title", content="All My Friends Music Festival")
     meta(property="og:site_name", content="All My Friends Music Festival")
-    meta(property="og:url", content="http://2014.amfmf.com")
-    meta(property="og:image", content="http://2014.amfmf.com/img/amfmf.jpg")
+    meta(property="og:url", content="http://allmyfriends.tv")
+    meta(property="og:image", content="http://allmyfriends.tv/img/amfmf.jpg")
     meta(property="og:type", content="website")
     meta(property="og:description", content="El festival cambia de época del año y de locación. Ahora se llevará a cabo en verano, específicamente el 14 de junio en Castillos del Mar, Rosarito, Baja California.")
     title= title
