Add support by logos and online tickets

--- a/views/index.jade
+++ b/views/index.jade
@@ -68,7 +68,7 @@ block content
             a(href="/media/venue/venue6.jpg"): img(src="/media/venue/venue6sml.jpg")
         .tickets
           h1 Tickets
-          != tickets
+          != str.tickets
         .site!= str.blackbox
         .site!= str.dientedeleon
         .site!= str.moustache
