--- a/views/index.jade
+++ b/views/index.jade
@@ -79,14 +79,43 @@ block content
     .info-box!= str.gettingthere
     .info-box!= str.infomore
 
-    #with!= str.with
+    #with
+      h2= str.sponsoredby
+      a(href="http://www.indio.com.mx", target="_blank"): img(src="/img/with/indio.png")
 
+      h2= str.initiativeof
+      a(href="http://2014.festivalnrmal.net", target="_blank"): img(src="/img/with/nrmal.png")
 
+      h2= str.supportof
+      a(href="http://www.aecontrol.com.mx/", target="_blank"): img(src="/img/with/aecontrol.png")
+      a(href="http://www.artealameda.bellasartes.gob.mx/", target="_blank"): img(src="/img/with/artealameda.png")
+      a(href="http://www.tijuana.gob.mx/index.aspx", target="_blank"): img(src="/img/with/ayuntamientotijuana.png")
+      a(href="http://www.culinaryartschool.edu.mx/", target="_blank"): img(src="/img/with/culinary.png")
+
+      h2= str.friendsof
+      a(href="http://www.despachodeproyectos.mx/", target="_blank"): img(src="/img/with/despachodeproyectos.png")
+      a(href="http://tjinchina.dinstudio.com", target="_blank"): img(src="/img/with/tjinchina.png")
+      a(href="http://www.turistalibre.com", target="_blank"): img(src="/img/with/turistalibre.png")
+      a(href="http://vivamusicfestival.com", target="_blank"): img(src="/img/with/vivapomona.png")
+
+      h2= str.associatedmedia
+      a(href="http://www.indierocks.mx/", target="_blank"): img(src="/img/with/indierocks.png")
+      a(href="http://www.lifeboxset.com/", target="_blank"): img(src="/img/with/lifeboxset.png")
+      a(href="http://www.marvin.com.mx/", target="_blank"): img(src="/img/with/marvin.png")
+      a(href="http://www.mehaceruido.com/", target="_blank"): img(src="/img/with/mehaceruido.png")
+      a(href="http://noiselab.com/", target="_blank"): img(src="/img/with/noiselab.png")
+      a(href="http://noisey.vice.com/es_mx/", target="_blank"): img(src="/img/with/noisey.png")
+      a(href="http://remezcla.com", target="_blank"): img(src="/img/with/remezcla.png")
+      a(href="http://www.vice.com/es_mx/", target="_blank"): img(src="/img/with/vice.png")
+      a(href="http://invasionlocal.com/", target="_blank"): img(src="/img/with/invasionlocal.png")
+      a(href="http://www.tijuanaconcerts.com", target="_blank"): img(src="/img/with/tjconcerts.png")
+      a(href="http://oneheapwonder.com/", target="_blank"): img(src="/img/with/oneheapwonder.png")
+      a(href="http://ohmytj.mx", target="_blank"): img(src="/img/with/ohmytj.png")
 
   footer
     p
-      a(href="https://www.facebook.com/allmyfriendsmf") Facebook
-      a(href="https://www.twitter.com/infoamf") @infoamf
+      a(href="https://www.facebook.com/allmyfriendsmf", target="_blank") Facebook
+      a(href="https://www.twitter.com/infoamf", target="_blank") @infoamf
 
 
 
