--- a/views/index.jade
+++ b/views/index.jade
@@ -91,6 +91,8 @@ block content
       a(href="http://www.artealameda.bellasartes.gob.mx/", target="_blank"): img(src="/img/with/artealameda.png")
       a(href="http://www.tijuana.gob.mx/index.aspx", target="_blank"): img(src="/img/with/ayuntamientotijuana.png")
       a(href="http://www.culinaryartschool.edu.mx/", target="_blank"): img(src="/img/with/culinary.png")
+      a(href="http://www.bccreativa.com/", target="_blank"): img(src="/img/with/bccreativa.png")
+
 
       h2= str.friendsof
       a(href="http://www.despachodeproyectos.mx/", target="_blank"): img(src="/img/with/despachodeproyectos.png")
@@ -111,6 +113,12 @@ block content
       a(href="http://www.tijuanaconcerts.com", target="_blank"): img(src="/img/with/tjconcerts.png")
       a(href="http://oneheapwonder.com/", target="_blank"): img(src="/img/with/oneheapwonder.png")
       a(href="http://ohmytj.mx", target="_blank"): img(src="/img/with/ohmytj.png")
+      a(href="#", target="_blank"): img(src="/img/with/17segundos.png")
+      a(href="http://www.apolorama.com/", target="_blank"): img(src="/img/with/apolorama.png")
+      a(href="http://filtermexico.com/", target="_blank"): img(src="/img/with/filter.png")
+
+
+
 
   footer
     p
