--- a/views/index.jade
+++ b/views/index.jade
@@ -113,11 +113,10 @@ block content
       a(href="http://www.tijuanaconcerts.com", target="_blank"): img(src="/img/with/tjconcerts.png")
       a(href="http://oneheapwonder.com/", target="_blank"): img(src="/img/with/oneheapwonder.png")
       a(href="http://ohmytj.mx", target="_blank"): img(src="/img/with/ohmytj.png")
-      a(href="#", target="_blank"): img(src="/img/with/17segundos.png")
+      a(href="http://www.uabcradio.mx/17segundos", target="_blank"): img(src="/img/with/17segundos.png")
       a(href="http://www.apolorama.com/", target="_blank"): img(src="/img/with/apolorama.png")
       a(href="http://filtermexico.com/", target="_blank"): img(src="/img/with/filter.png")
-
-
+      a(href="http://b1mas4.com/", target="_blank"): img(src="/img/with/filter.png")
 
 
   footer
