--- a/views/index.jade
+++ b/views/index.jade
@@ -116,7 +116,7 @@ block content
       a(href="http://www.uabcradio.mx/17segundos", target="_blank"): img(src="/img/with/17segundos.png")
       a(href="http://www.apolorama.com/", target="_blank"): img(src="/img/with/apolorama.png")
       a(href="http://filtermexico.com/", target="_blank"): img(src="/img/with/filter.png")
-      a(href="http://b1mas4.com/", target="_blank"): img(src="/img/with/filter.png")
+      a(href="http://b1mas4.com/", target="_blank"): img(src="/img/with/binomio.png")
 
 
   footer
