Add getting there

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -423,10 +423,23 @@ a
     h2
       font-size 48px
 
-#with
+
+#gettingthere
   margin 40px 0
+  padding 40px 0
+  background #fff
+  img
+    display block
+    margin 40px auto
+
+#with
+  margin 40px auto
+  max-width 768px
+  text-align center
   h2
     font-size 32px
+
+
 
 footer
   box-sizing border-box
