Add border shuttle info

--- a/views/index.jade
+++ b/views/index.jade
@@ -76,11 +76,8 @@ block content
     h1!= str.wheretosleep
     .info-box!= str.hotelcoronaplaza
     .info-box!= str.hotelcastillosdelmar
-    //.info-box!= str.gettingthere
+    .info-box!= str.gettingthere
     .info-box!= str.infomore
-
-  #gettingthere
-    img.gettingthere(src="/img/gettingthere.jpg")
 
   #with
     h2= str.sponsoredby
