--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -439,7 +439,27 @@ a
   h2
     font-size 32px
 
-
+#congrats
+  position absolute
+  top 40px
+  width 100%
+  p
+    font-size 48px
+    color #fff
+    background #000
+    width 420px
+    margin 80px auto
+    padding 40px
+    text-align center
+    transform rotate(-6deg)
+    -webkit-transform rotate(-6deg)
+    a
+      color #fff
+      text-decoration none
+  img
+    display block
+    max-width 100%
+    margin 40px auto
 
 footer
   box-sizing border-box
